# Course-PNL

./: .gitignore  README.md
Other/PETSc_on_GPUs/: CMakeLists.txt  README.md
Other/PETSc_on_GPUs/src/: 01_main.c
lesson_1/: README.md
lesson_1/docs/: 00_install.md  01_hello.md  02_variables.md  03_operations.md  04_conditionals_and_loops.md  05_arrays.md  06_functions.md
lesson_1/src/c_examples/: 02_variables.c  03_operations.c  04_conditionals_and_loops.c  05_arrays.c  06_functions.c
lesson_1/src/fortran_examples/: 01_hello.f90  02_variables.f90  03_operations.f90  04_conditionals_and_loops.f90  05_arrays.f90  06_functions.f90
